--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <nav>
-            <img src="/images/logo.webp" alt="Tsmart logo">
+            <img src="./images/logo.webp" alt="Tsmart logo">
             <!--mobile menu-->
             <div class="mobile-menu">
                 <i data-feather="user" class="feather-icons"></i>
@@ -177,7 +177,7 @@
 
     <!-- Footer -->
     <footer>
-        <img src="/images/footer-logo.png" alt="Footer Logo">
+        <img src="./images/footer-logo.png" alt="Footer Logo">
         <div class="flex-footer">
             <address>
                 <a href="#"><i class="fa-solid fa-location-dot fa-lg"></i>
